Remove overflow to prevent scrolling

--- a/frontend/src/pages/Signup.css
+++ b/frontend/src/pages/Signup.css
@@ -2,4 +2,5 @@
 
 body {
     background-color: #FFF8E3;
+    overflow: hidden;
 }
